// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call-recording-service pauseRecording sends a soap request with the correct xml 1`] = `
"<soap:Envelope xmlns:soap=\\"http://www.w3.org/2003/05/soap-envelope\\" xmlns:cal=\\"http://redcentrex.redwoodtech.com/calls\\">
  <soap:Header>
    <wsse:Security soap:mustUnderstand=\\"true\\" xmlns:wsse=\\"http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd\\" xmlns:wsu=\\"http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd\\">
      <wsse:UsernameToken wsu:Id=\\"UsernameToken-1\\">
        <wsse:Username>username</wsse:Username>
        <wsse:Password Type=\\"http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordText\\">password</wsse:Password>
      </wsse:UsernameToken>
    </wsse:Security>
  </soap:Header>
  <soap:Body>
    <cal:RecordingRequest>
      <cal:UserID>agent@example.com</cal:UserID>
      <cal:Record>pause</cal:Record>
      <cal:Muted>0</cal:Muted>
    </cal:RecordingRequest>
  </soap:Body>
</soap:Envelope>
"
`;

exports[`call-recording-service resumeRecording sends a soap request with the correct xml 1`] = `
"<soap:Envelope xmlns:soap=\\"http://www.w3.org/2003/05/soap-envelope\\" xmlns:cal=\\"http://redcentrex.redwoodtech.com/calls\\">
  <soap:Header>
    <wsse:Security soap:mustUnderstand=\\"true\\" xmlns:wsse=\\"http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-secext-1.0.xsd\\" xmlns:wsu=\\"http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd\\">
      <wsse:UsernameToken wsu:Id=\\"UsernameToken-1\\">
        <wsse:Username>username</wsse:Username>
        <wsse:Password Type=\\"http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#PasswordText\\">password</wsse:Password>
      </wsse:UsernameToken>
    </wsse:Security>
  </soap:Header>
  <soap:Body>
    <cal:RecordingRequest>
      <cal:UserID>agent@example.com</cal:UserID>
      <cal:Record>resume</cal:Record>
      <cal:Muted>0</cal:Muted>
    </cal:RecordingRequest>
  </soap:Body>
</soap:Envelope>
"
`;
